added basic functionality

--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
         <h2>The best burguers and pizzas in town.</h2>
     </header>
     <main>
-        <section class="menu-list">
+        <ul class="menu-list" id="menu-list">
+        </ul>
+        <section class="order-list">
+            <h3>Your order</h3>
+            <div class="order-container">
+                <ul class="order-list" id="order-list">
+
+                </ul>
+                <div class="order-total" id="order-total">
+                    <hr>
+                    Total price: 
+                </div>
+            </div>
+            <button>Complete Order</button>
         </section>
-        <section class="order-list"></section>
     </main>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
