more changes to UI

--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
     <main>
         <ul class="menu-list" id="menu-list">
         </ul>
-        <section class="order-list">
+        <section class="order-section" id="order-section">
             <h3>Your order</h3>
             <div class="order-container">
                 <ul class="order-list" id="order-list">
 
                 </ul>
                 <div class="order-total" id="order-total">
-                    <hr>
-                    Total price: 
                 </div>
             </div>
-            <button id="complete-order-btn">Complete Order</button>
+            <button class="complete-order-btn" id="complete-order-btn">Complete Order</button>
         </section>
         <section class="modal hidden" id="modal">
             <h2 class="modal-title">Enter card details</h2>
